--- a/Project28.vcxproj.filters
+++ b/Project28.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClCompile Include="loadOBJ.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="draw.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="matrix.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -41,13 +38,13 @@
     <ClInclude Include="object.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="draw.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="matrix.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="loadShader.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="declaration.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
